Add registration and login

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Climbing diary</title>
+
 </head>
 <body>
-    <h1>Witaj w dzienniku wspinaczkowym</h1>
-    <form th:action="@{/logout}" method="post" id="logoutForm">
-        <input type="submit" value="Logout">
-    </form>
 
-    <a th:href="@{/routsClimber}" id="design">Dodaj drogę</a>
+<h1>Witaj w dzienniku wspinaczkowym</h1>
+
+<div th:if="${error}">
+    Unable to login. Check your username and password.
+</div>
+<p>New here? Click
+    <a th:href="@{/register}">here</a> to register</p><br>
+
+<p>Log in</p>
+<form th:action="@{/login}" method="post" id="loginForm">
+<!--    login jest defaultowo w Springu - tak musi zostać, choć nie mam /login-->
+    <label for="username">Username: </label>
+    <input type="text" name="username" id="username">
+    <label for="password">Hasło: </label>
+    <input type="password" name="password" id="password">
+    <input type="submit" value="Login">
+</form>
 
 </body>
 </html>
