--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -2,41 +2,80 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Climbing diary</title>
     <link th:href="@{/css/bootstrap.css}" rel="stylesheet"/>
     <script th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
+    <script th:src="@{/js/styles.js}" type="text/javascript"></script>
 </head>
 <body>
 <div class="container">
     <div class="grid">
-            <div class="box0">
-                <h1>DZIENNIK WSPINACZKOWY</h1>
-            </div>
+
+        <div th:replace="header::mojHeader"></div>
+
         <div class="box1">
         <h2>Cześć</h2> <h2 th:text="${name}"></h2>
 
-        <p>Co Cię tu dziś sprowadza?</p>
+        <h4>Co Cię tu dziś sprowadza?</h4>
 
         <p>Chcę dodać drogę którą przeszedłem</p>
-        <a class="btn btn-primary" href="/addRoutt" role="button" id="button1">DODAJ</a>
+            <button class="btn btn-primary" onclick="showSth2()">DODAJ</button>
 
         <p>Pokaż mój dzinnik wspinaczkowy</p>
-        <a class="btn btn-primary" href="/showDiary" role="button">POKAŻ</a>
+            <a class="btn btn-primary" th:href="@{/showDiary}">POKAŻ</a>
 
         <p>Pokaż moje miejsce w rankingu</p>
-        <a class="btn btn-primary" href="/showDiary" role="button">POKAŻ</a>
+            <button class="btn btn-primary" onclick="showSth()">POKAŻ</button>
+
+            <div style="display:none" id="myDiv">
+            <p>To ja beata</p>
+            </div>
+
+            <div th:if="${role == 'ADMIN'}">
+                <p>Dodaj nową drogę do zestawienia</p>
+                <a class="btn btn-primary" href="/addRout" role="button">DODAJ</a>
+            </div>
+
         </div>
         <div class="box2">
-            <form th:action="@{/addRoutForClimber}" method="post">
-                <input th:type="text" name="name" value="Nazwa drogi">
-                <input th:type="text" name="rate" value="Wycena">
+            <div th:if="${info != null}">
+                <p th:text="${info}"></p>
+            </div>
+            <form th:action="@{/addRoutForClimber}" method="post" style="display:none" id="addForm">
+                <select name="name">
+                    <option th:each="n : ${allRouts}" th:value="${n.name}" th:text="${n.name}"></option>
+                </select>
+                <select name="">
+                    <option th:each="n : ${allRouts}" th:value="${n.rate}" th:text="${n.rate}"></option>
+                </select>
                 <select name="region">
-<!--                    <option th:each="r : ${allRegion}" th:value="${r.name}" th:name="${r.name}"></option>-->
                     <option th:each="region : ${T(com.beatex.climbingDiary.model.Region).values()}"
                             th:value="${region}" th:text="${region.name}"></option>
                 </select>
                 <input type="submit" value="Dodaj">
             </form>
+
+            <div style="display:none" id="showDiary">
+<!--                <a th:href="@{/showDiary}">POKAZ DROGE</a>-->
+                <div th:unless="${#lists.isEmpty(routsClimber)}">
+                    <table>
+                        <thead>
+                            <th>Name</th>
+                            <th>Rate</th>
+                            <th>Region</th>
+                        </thead>
+                        <tbody>
+                            <tr th:each="r : ${routsClimber}">
+                                <td th:text="${r.name}"></td>
+                                <td th:text="${r.rate}"></td>
+                                <td th:text="${r.getRegion()}"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
