--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,3 +1,5 @@
-<div th:fragment="mojHeader" xmlns:th="https://www.thymeleaf.org" class="box0">
-    <h1>DZIENNIK WSPINACZKOWY iiiiiii</h1>
+<div th:fragment="myHeader" xmlns:th="https://www.thymeleaf.org" class="box0">
+    <div class="jumbotron text-center">
+        <h1>DZIENNIK WSPINACZKOWY</h1>
+    </div>
 </div>
