--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Climbing diary</title>
+    <link th:href="@{/css/bootstrap.css}" rel="stylesheet"/>
+    <script th:src="@{/js/bootstrap.js}" type="text/javascript"></script>
+    <script th:src="@{/js/styles.js}" type="text/javascript"></script>
 </head>
 <body>
 <div class="container">
@@ -15,16 +18,17 @@
         <div th:if="${error}">
             Unable to login. Check your username and password.
         </div>
-        <p>New here? Click
-            <a th:href="@{/register}">here</a> to register</p><br>
+        <h3>Jesteś tu pierwszy raz? Kliknij
+            <a th:href="@{/register}">tutaj</a></h3><br>
 
-        <p>Log in</p>
+        <br>
+        <h3>Zaloguj się</h3>
         <form th:action="@{/login}" method="post" id="loginForm">
         <!--    login jest defaultowo w Springu - tak musi zostać, choć nie mam /login-->
-            <label for="username">Username: </label>
-            <input type="text" name="username" id="username">
+            <label for="username">Użytkownik: </label>
+            <input type="text" name="username" placeholder="" id="username">
             <label for="password">Hasło: </label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="password" placeholder="" id="password">
             <input type="submit" value="Login">
         </form>
 
