--- a/src/main/resources/templates/routs.html
+++ b/src/main/resources/templates/routs.html
@@ -41,6 +41,12 @@
                     <input type="submit" value="usuń">
                 </form>
         </div>
+        <div>
+            <h3>Pokaż wszystkich wspinaczy</h3>
+            <a class="btn btn-primary" th:href="@{/getAllClimbers}">POKAŻ</a>
+        </div>
+
+        <h3>Zesawienie wszystkich dróg</h3>
         <table class="table table-sm">
             <thead>
                 <th>Nazwa drogi</th>
